データ型の補整